fix: titlebar is now visible when counter is full

--- a/src/index.css
+++ b/src/index.css
@@ -78,6 +78,7 @@ footer {
  */
 
 .titlebar {
+  z-index: 1;
   position: absolute;
   top: 0;
   right: 0;
